[workspace]
members = [
    "attributes",
    "cindy",
    "conversion",
    "crates",
    "customtypes",
    "expressions",
    "flow_of_control",
    "formatprint",
    "function",
    "generics",
    "httpie",
    "journal",
    "leetcode",
    "microsoft",
    "modules",
    "primitives",
    "thumbor",
    "types",
    "varbindings",
    "webservice",
    "queryer",
    "ownership",
    "guessgame",
    "utiltest",
    "minigrep",
    "closure",
    "smartpointer",
    "concurrent",
    "restaurant",
    "webapp",
]