[package]
name = "example"
version = "0.1.0"
authors = ["James Zow <jameszow@163.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
tokio = { version = "1.18.2", features = ["full"] }
mybatis = { version = "1.0.7", path = "../mybatis", features = ["debug_mode"]}
mybatis-macro = { version = "1.0.3", path = "../mybatis-macro"}