[package]
name = "example"
version = "0.1.0"
authors = ["James Zow <jameszow@163.com>"]
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
tokio = { version = "1.18.2", features = ["full"] }
mybatis = { path = "../mybatis", features = ["debug_mode"]}
mybatis-util = {version = "1.0.8", path = "../mybatis-util"}
mybatis-core = {version = "1.0.8", path = "../mybatis-core"}