[package]
name = "mybatis-macro"
version = "2.0.3"
description = "mybatis macro driver"
authors = ["James Zow <jameszow@163.com>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.59.0"
repository = "https://github.com/summer-rust/summer-mybatis/tree/master/mybatis-macro"
homepage = "https://github.com/summer-rust/summer-mybatis/blob/master/mybatis-macro/README.md"
documentation = "https://github.com/summer-rust/summer-mybatis/blob/master/mybatis-macro/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_mode = []
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
html_parser = "0.6.2"
###
base64 = "0.21.1"
url = "2.2.2"