[package]
name = "mybatis-sql"
version = "1.0.8"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis sql"

[features]
#default is fast_mode
default = []
debug_mode = []

[dependencies]
once_cell = "1.9.0"
mybatis-core = { version = "1.0.8", path = "../mybatis-core" }
mybatis-macro = { version = "1.0.8", path = "../mybatis-macro" }

#serde
serde = { version = "1", features = ["derive"] }
rbson = "2.0.3"
dashmap = { version = "4" }
base64 = "0.13"
async-trait = "0.1"