[package]
name = "mybatis-sql"
version = "2.0.1"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis sql"

[features]
#default is fast_mode
default = []
debug_mode = []

[dependencies]
once_cell = "1.9.0"
mybatis-core = { version = "2.0.0", path = "../mybatis-core" }
mybatis-macro = { version = "2.0.2", path = "../mybatis-macro" }

#serde
serde = { version = "1", features = ["derive"] }
rbson = "2.0.4"
dashmap = { version = "5" }
base64 = "0.21"
async-trait = "0.1"