[package]
name = "mybatis-tests"
version = "1.0.0"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis tests"

[dependencies]
mybatis = {version = "1.0.0", path = "../mybatis"}
mybatis-drive = {version = "1.0.0", path = "../mybatis-drive"}
mybatis-util = {version = "1.0.0", path = "../mybatis-util"}
