[package]
name = "mybatis-tests"
version = "1.0.8"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis tests"
publish = false

[dependencies]
mybatis-core = {version = "1.0.8", path = "../mybatis-core"}
mybatis-util = {version = "1.0.8", path = "../mybatis-util"}
mybatis = {version = "1.0.8", path = "../mybatis"}
