[package]
name = "mybatis-util"
version = "1.0.0"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0 license"
description = "mybatis util"

[dependencies]
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
mybatis-core = { path = "../mybatis-core" }