[package]
name = "mybatis-util"
version = "2.0.0"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis util"

[dependencies]
mybatis-core = {version = "2.0.0", path = "../mybatis-core"}
rbson = { version = "2.0.4", features = ["uuid-0_8", "chrono-0_4"] }