[package]
name = "mybatis"
version = "1.0.0"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis core"

[features]
default = ["default_mode", "all-database"]
#debug_mode feature will show decode json data
debug_mode = ["mybatis-drive/debug_mode", "mybatis-macros/debug_mode"]
default_mode = ["mybatis-drive", "mybatis-macros"]
#support upper case sql keyword
upper_case_sql_keyword = []
#runtime  database
all-database = ["default_mode", "mybatis-drive/all-database"]
mysql = ["default_mode", "mybatis-drive/mysql"]
postgres = ["default_mode", "mybatis-drive/postgres"]
sqlite = ["default_mode", "mybatis-drive/sqlite"]
mssql = ["default_mode", "mybatis-drive/mssql"]

#choose runtime
runtime-tokio-rustls = ["mybatis-drive/runtime-tokio-rustls"]
runtime-actix-rustls = ["mybatis-drive/runtime-actix-rustls"]
runtime-async-std-rustls = ["mybatis-drive/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["mybatis-drive/runtime-tokio-native-tls"]
runtime-actix-native-tls = ["mybatis-drive/runtime-actix-native-tls"]
runtime-async-std-native-tls = ["mybatis-drive/runtime-async-std-native-tls"]

#enable_format bson
format_bson = ["mybatis-drive/format_bson"]

[dependencies]
mybatis-macros = { version = "1.0.0", path = "../mybatis-macros", default-features = false, optional = true }
mybatis-util = { version = "1.0.0", path = "../mybatis-util", default-features = false}
mybatis-sql = { version = "1.0.0", path = "../mybatis-sql", default-features = false}
mybatis-drive = { version = "1.0.0", path = "../mybatis-drive", default-features = false, optional = true }

################################################################
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
#serde
serde = { version = "1", features = ["derive"] }
#uuid
uuid = { version = "0.8", features = ["serde", "v4"] }
#log
log = { version = "0.4", default-features = false }
#async trait
async-trait = { version = "0.1.53"}
futures-core = { version = "0.3" }
futures = { version = "0.3" }
once_cell = "1.10"
#object_id
hex = "0.4"
rand = "0.8"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
