[package]
name = "mybatis"
version = "2.0.4"
edition = "2021"
rust-version = "1.59.0"
authors = ["James Zow <Jameszow@163.com>"]
license = "Apache-2.0"
description = "mybatis"
readme = "README.md"
keywords = ["mybatis", "orm", "postgres", "mysql", "sqlite"]
documentation = "https://github.com/summer-rust/summer-mybatis#readme"
repository = "https://github.com/summer-rust/summer-mybatis"
homepage = "https://github.com/summer-rust/summer-mybatis#readme"

[features]
default = ["default_mode", "all-database"]
#debug_mode feature will show decode json data
debug_mode = ["mybatis-core/debug_mode", "mybatis-macro/debug_mode", "mybatis-sql/debug_mode"]
default_mode = ["mybatis-core", "mybatis-macro", "mybatis-sql"]
#support upper case sql keyword
upper_case_sql_keyword = []
#runtime  database
all-database = ["default_mode", "mybatis-core/all-database"]
mysql = ["default_mode", "mybatis-core/mysql"]
postgres = ["default_mode", "mybatis-core/postgres"]
sqlite = ["default_mode", "mybatis-core/sqlite"]
mssql = ["default_mode", "mybatis-core/mssql"]

#choose runtime
runtime-tokio-rustls = ["mybatis-core/runtime-tokio-rustls"]
runtime-actix-rustls = ["mybatis-core/runtime-actix-rustls"]
runtime-async-std-rustls = ["mybatis-core/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["mybatis-core/runtime-tokio-native-tls"]
runtime-actix-native-tls = ["mybatis-core/runtime-actix-native-tls"]
runtime-async-std-native-tls = ["mybatis-core/runtime-async-std-native-tls"]

#enable_format bson
format_bson = ["mybatis-core/format_bson"]

[dependencies]
mybatis-util = { version = "2.0.0", path = "../mybatis-util", default-features = false}
mybatis-sql = { version = "2.0.1", path = "../mybatis-sql", default-features = false, optional = true}
mybatis-core = { version = "2.0.1", path = "../mybatis-core", default-features = false, optional = true}
mybatis-macro = { version = "2.0.3", path = "../mybatis-macro", default-features = false, optional = true}

################################################################
rbson = { version = "2.0.4", features = ["uuid-0_8", "chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
#serde
serde = { version = "1", features = ["derive"] }
#uuid
uuid = { version = "1.6", features = ["serde", "v4"] }
#log
log = { version = "0.4", default-features = false }
#async trait
async-trait = { version = "0.1.53"}
futures-core = { version = "0.3" }
futures = { version = "0.3" }
once_cell = "1.10"
#object_id
hex = "0.4"
rand = "0.8"

[dev-dependencies]
serde_json = "1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
