[package]
name = "covid_19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-cors = "0.6.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.39"
#mysql = "*"
mysql = "22.1.0"